...
              </View>
              <View>
                <Label>Last name</Label>
                <Input value={lastName} onChangeText={setLastName} autoCapitalize="words" />
              </View>
              <View>
                <Label>Email</Label>
                <Input
                  value={email}
                  onChangeText={setEmail}
                  autoCapitalize="none"
                  keyboardType="email-address"
                />
              </View>
              <View>
                <Label>Password</Label>
                <Input value={password} onChangeText={setPassword} secureTextEntry />
              </View>
              <View>
                <Label>Year level</Label>
                <Input value={yearLevel} onChangeText={setYearLevel} />
              </View>
...
